scrollbars issue fix

--- a/client-side/src/app/chart/chart.component.scss
+++ b/client-side/src/app/chart/chart.component.scss
@@ -9,3 +9,8 @@
     padding: 1.5rem;
     border-radius: 0.5rem;
   }
+
+  :host {
+    display: block;
+    overflow: hidden;
+  }
